5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1758_1576.log
== TEST (2019-05-28 22:24:08) 
-- CODE:
from numpy import*
vet1 = (array(eval(input("Vet 1:"))))
vet2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33

pos = 0
v_e = 0
v_b = 0
while (pos<size(vet1)andpos<size(vet2)):
	





-- ERROR:
File "XXXX", line 12
    while (pos<size(vet1)andpos<size(vet2)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:24:23) 
-- CODE:
from numpy import*
vet1 = (array(eval(input("Vet 1:"))))
vet2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33

pos = 0
v_e = 0
v_b = 0
while (pos<size(vet1) and pos<size(vet2)):
	





-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:28:25) 
-- CODE:
from numpy import*
vet1 = (array(eval(input("Vet 1:"))))
vet2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33

i = 0
v_e = 0
v_b = 0
while (i<size(vet1) and i<size(vet2)):
	i = i+1
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:38:43) 
-- CODE:
from numpy import*
vet1 = (array(eval(input("Vet 1:"))))
vet2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(vet1))

i = 0
v_e = 0
v_b = 0
while (i<size(vet1) and i<size(vet2)):
	i = i+1
	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:04:04) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 andpb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb= 22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- ERROR:
File "XXXX", line 21
    elif((pe==11 andpb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:04:15) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb= 22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- ERROR:
File "XXXX", line 25
    elif((pb==11 and pe==33)or(pb= 22 and pe==11)or(pb==33 and pe==22)):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:04:34) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:05:30) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e*[p]
	pb = b*[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:06:06) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:06:18) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c=c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.471956
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSABIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:08:09) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c = c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
elif(ep==bp):
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.52578
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSABIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:09:00) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	else:
		c = c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.503542
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSABIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:09:10) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	else:
		c = c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.387743
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSABIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:09:23) 
-- CODE:
from numpy import*
v1 = (array(eval(input("Vet 1:"))))
v2 = (array(eval(input("Vet 2:"))))

#predra = 11
#papel = 22
#tesoura = 33
print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = v1[p]
	pb = v2[p]
	if((pe == 11 and pb == 11) or (pe==22 and pb==22) or (pe==33 and pb==33)):
		c = c+1
		p = p+1
	elif((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	else:
		c = c+1
		bp = bp+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.579924
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSABIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:20:02) 
-- CODE:
from numpy import*
e = (array(eval(input("Vet 1:"))))
b = (array(eval(input("Vet 2:"))))

print(size(v1))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c = c+1
		bp = ep+1
		p = p+1
	else:
		c = c+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.447125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 5, in <module>
    print(size(v1))
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:21:51) 
-- CODE:
from numpy import*
e = (array(eval(input("Vet 1:"))))
b = (array(eval(input("Vet 2:"))))

print(size(e))

c = 0
ep = 0
bp = 0
p = 0

while(c!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c = c+1
		bp = ep+1
		p = p+1
	else:
		c = c+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.385991
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSABIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:23:23) 
-- CODE:
from numpy import*
e = (array(eval(input("Vet 1:"))))
b = (array(eval(input("Vet 2:"))))

print(size(e))

ve = 0
vb = 0
p = 0

while(p!=size(e)):
	pe = e[p]
	pb = b[p]
	if((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		c = c+1
		ep = ep+1
		p = p+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		c = c+1
		bp = ep+1
		p = p+1
	else:
		c = c+1
		p = p+1
		
if(ep>bp):
	print("EUSABIA")
elif(bp>ep):
	print("BARSANULFO")
else:
	print("EMPATE")

	
	
	





-- EXECUTION TIME:
0.548784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 15, in <module>
    c = c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:31:01) 
-- CODE:
from numpy import*
e = (array(eval(input("Vet 1:"))))
b = (array(eval(input("Vet 2:"))))

print(size(e))

i = 0
ve = 0
vb = 0

while(i<size(e) and size(e)==size(b)):
	pe = e[i]
	pb = b[i]
	if((pe==11 and pb==33)or(pe==22 and pb==11)or(pe==33 and pb==22)):
		i = i+1
		ve = ve+1
	elif((pb==11 and pe==33)or(pb==22 and pe==11)or(pb==33 and pe==22)):
		i = i+1
		vb = vb+1
	else:
		i = i+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
-- EXECUTION TIME:
0.55033
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
